[package]
name = "flutter_embedder"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
log = { version = "0.4.17", features = ["std"] }
env_logger = "0.10"
# wgpu = "0.13.1"
# wgpu-hal = { version = "0.13.1", features = ["vulkan"] }
wgpu = { version = "0.15.0" }
wgpu-hal = { version = "0.15.0", features = ["vulkan"] }
# winit = "0.27.1"
winit = { git = "https://github.com/anlumo/winit-new-keyboard.git", branch = "new-keyboard-linux", default-features = false, features = ["x11"] }
tokio = { version = "1.19.2", features = ["full"] }
ash = "0.37.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
arboard = "3.1.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
serde_variant = "0.1.1"
bytemuck = { version = "1.12.1", features = ["derive"] }

[build-dependencies]
bindgen = "0.63.0"
